// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.providers.aws.eks;

option go_package = "namespacelabs.dev/foundation/providers/aws/eks";

message OpEnsureAwsAuth {
    string          username = 1;
    string          rolearn  = 2;
    repeated string group    = 3;
}